<resources>
    <string name="app_name">MediaLab Android Engineer</string>
    <string name="user_item_bio_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, elementum vel lorem ut, tempor pharetra sapien. Nunc tempor et.</string>
    <string name="user_item_name_example">Juan Sanmiguel</string>
    <string name="user_item_avatar_content_description">User item avatar</string>
    <string name="user_profile_add_photo_button_content_description">Add new avatar button</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="save">Save</string>
    <string name="add_user_floating_action_button">Add user floating action button.</string>
    <string name="name_cant_be_empty">User name can\'t be empty.</string>
    <string name="empty_users_text">Oops! Looks like there are no users registered. Try adding one!</string>
</resources>