<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_item_avatar_card_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_item_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/user_item_avatar_content_description" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/user_item_name_example"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_item_avatar_card_view"
        app:layout_constraintTop_toTopOf="@+id/user_item_avatar_card_view" />

    <TextView
        android:id="@+id/user_item_bio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/user_item_bio_example"
        app:layout_constraintBottom_toBottomOf="@+id/user_item_avatar_card_view"
        app:layout_constraintEnd_toEndOf="@+id/user_item_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_item_name"
        app:layout_constraintTop_toBottomOf="@+id/user_item_name" />

</androidx.constraintlayout.widget.ConstraintLayout>